--- a/projects/1.html
+++ b/projects/1.html
@@ -1,53 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<!-- Bootstrap CSS -->
-		 <link href="style.css" type="text/css" rel="stylesheet">
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway&display=swap" rel="stylesheet">
-
-		<title>Abby Moss</title>
-	</head>
-	<body>
-	  <h1 class="text-center">Abby Moss</h1>
-          <div class="container">
-            <div id="menu" class"menu" class="row">
+    <!-- Bootstrap CSS -->
+      <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway&display=swap" rel="stylesheet">
+    
+    <title>Abby Moss</title>
+  </head>
+  <body>
+    <h1 class="text-center">Abby Moss</h1>
+      <nav id="menu" class="stroke">
+          <ul>
+              <li><a href="./index.html" id="menu">Home</a></li>
+              <li><a href="./experience.html" id="menu">Experience</a></li>
+              <li><a href="ref=./projects/1.html" target=_blank id="menu">Portfolio</a></li>
+              <li><a href="./contact.html" id="menu">Contact Me</a></li>
+          </ul>
+      </nav>
+      <h2 class="text-center">Class Projects</h2><br>
+      <h3>Project #1: Photoshop</h3>
+      <div class="containter">
+          <div class="row">
               <div class="col">
-                <a class="menu" href=#aboutme>About Me</a>
+                  <p>This is my first assignemnt that I completed on Adobe Photoshop. Am I even supposed to include things like these? I'm so confused on the purpose of this website..</p>
               </div>
               <div class="col">
-                <a class="menu" href=#experience>Experience</a>
+                  <img src="img/Project1.psd" alt="Project 1" height="400" width="auto">
               </div>
-              <div class="col">
-                <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
-              </div>
-              <div class="col">
-                <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
-              </div>
-            </div>
           </div>
-		<h1>Project #1</h1>
-
-		<!-- Optional JavaScript -->
-		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script
-			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-			crossorigin="anonymous"
-		></script>
-	</body>
+      </div>
+      <h3>Project #2</h3>
+      <div class="containter">
+          <div class="row">
+              <div class="col">
+                  <img src="img/Project1.psd" alt="Project 1" height="400" width="auto">
+              </div>
+              <div class="col">
+                  <p>This is my second assignment that was completed in Adobe Premier. The </p>
+              </div>
+          </div>
+      </div>
+    </body>
 </html>
