--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <title>Abby Moss</title>
   </head>
   <body>
-    <h1 class="text-center">Abby Moss</h1><br>
+    <h1 class="text-center">Abby Moss</h1>
       <nav id="menu" class="stroke">
           <ul>
               <li><a href="./index.html" id="menu">Home</a></li>
