--- a/projects/1.html
+++ b/projects/1.html
@@ -31,7 +31,7 @@
                   <p>This is my first assignemnt that I completed on Adobe Photoshop. Am I even supposed to include things like these? I'm so confused on the purpose of this website..</p>
               </div>
               <div class="col">
-                  <img src="img/Project1.psd" alt="Project 1" height="400" width="auto">
+                  <img src="img/Project1.png" alt="Project 1" height="400" width="auto">
               </div>
           </div>
       </div>
@@ -39,7 +39,7 @@
       <div class="containter">
           <div class="row">
               <div class="col">
-                  <img src="img/Project1.psd" alt="Project 1" height="400" width="auto">
+                  <img src="img/Project1.png" alt="Project 1" height="400" width="auto">
               </div>
               <div class="col">
                   <p>This is my second assignment that was completed in Adobe Premier. The </p>
