--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
           <ul>
               <li><a href="./index.html" id="menu">Home</a></li>
               <li><a href="./experience.html" id="menu">Experience</a></li>
-              <li><a href="ref=./projects/1.html" target=_blank id="menu">Portfolio</a></li>
+              <li><a href="ref=./portfolio.html" id="menu">Portfolio</a></li>
               <li><a href="./contact.html" id="menu">Contact Me</a></li>
           </ul>
       </nav>
