--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       </nav>
       <h2 class="text-center">Class Projects</h2><br>
       <h3>Project #1: Photoshop</h3>
-      <div class="containter">
+      <div class="container">
           <div class="row">
               <div class="col">
                   <p>This is my first assignemnt that I completed on Adobe Photoshop. Am I even supposed to include things like these? I'm so confused on the purpose of this website..</p>
@@ -36,7 +36,7 @@
           </div>
       </div>
       <h3>Project #2</h3>
-      <div class="containter">
+      <div class="container">
           <div class="row">
               <div class="col">
                  <iframe width="560" height="315" src="img/Project2.mp4" frameborder="0" allowfullscreen></iframe>
