--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav id="menu" class="stroke">
           <ul>
               <li><a href="./index.html" id="menu">Home</a></li>
-              <li><a href="./experience.html" id="menu">Experience</a></li>
+              <li><a href="./experience.html" id="menu">About Me</a></li>
               <li><a href="./portfolio.html" id="menu">Portfolio</a></li>
               <li><a href="./contact.html" id="menu">Contact Me</a></li>
           </ul>
@@ -29,11 +29,10 @@
   <div class="row" style="background-color: var(--green)">
       <div class="col">
         <h1 class="job"><br><br>Junior High History Teacher| University of Utah Graduate Student</h1>  
-        <!--I have tried everything to vertically center the above text on the page and I can't figure it out!!-->
       </div>
     <div class="col">
-        <i class="fi-rr-edit-alt"></i>
-      <p > put icons of skills and such</p>
+        <h2 style="color: var(--white)">Experience and Skills</h2>
+        <p style=color: var(--white)>Put icons of skills and such</p>
     </div>
   </div>
 </div>  
