--- a/experience.html
+++ b/experience.html
@@ -19,13 +19,13 @@
       <nav id="menu" class="stroke">
           <ul>
               <li><a href="./index.html" id="menu">Home</a></li>
-              <li><a href="./experience.html" id="menu">Experience</a></li>
+              <li><a href="./experience.html" id="menu">About Me</a></li>
               <li><a href="./portfolio.html" id="menu">Portfolio</a></li>
               <li><a href="./contact.html" id="menu">Contact Me</a></li>
           </ul>
       </nav>
       
-      <h2 class="text-center">Experience</h2>
+      <h2 class="text-center">About Me</h2><br>
       <div class="container">
           <div class="row">
               <div class="col">
@@ -37,7 +37,7 @@
                   </p>
               </div>
               <div class="col">
-                  <img src="img/Headshot.png" alt="Abby Moss Headshot" height="400" width="auto">
+                  <img src="img/Headshot.png" alt="Abby Moss Headshot" height="400" width="auto" style="float: right; padding-right: 80px">
               </div>
           </div>
       </div>
