--- a/portfolio.html
+++ b/portfolio.html
@@ -18,31 +18,44 @@
       <nav id="menu" class="stroke">
           <ul>
               <li><a href="./index.html" id="menu">Home</a></li>
-              <li><a href="./experience.html" id="menu">Experience</a></li>
-              <li><a href="ref=./portfolio.html" id="menu">Portfolio</a></li>
+              <li><a href="./experience.html" id="menu">About Me</a></li>
+              <li><a href="./portfolio.html" id="menu">Portfolio</a></li>
               <li><a href="./contact.html" id="menu">Contact Me</a></li>
           </ul>
       </nav>
-      <h2 class="text-center">Class Projects</h2><br>
-      <h3>Project #1: Photoshop</h3>
+      <h2 class="text-center">Class Projects</h2>
+      <p style="text-align: center">Throughout the Multimedia class we have completed several projects utlizing different technology programs. Below are my completed projects.</p> <br> 
       <div class="container">
-          <div class="row">
+          <div class="row" style="padding: 20px">
               <div class="col">
-                  <p>This is my first assignemnt that I completed on Adobe Photoshop. Am I even supposed to include things like these? I'm so confused on the purpose of this website..</p>
+                  <br><br><br><br><br><h3>Project #1: Adobe Photoshop</h3>
+                  <p style="font-size: 18px">This is my first assignemnt that I completed on Adobe Photoshop. This is a edited headshot. This picture represents many features of Photoshop such as, touching up, blur, color editing, etc.</p>
               </div>
               <div class="col">
-                  <img src="img/Project1.png" alt="Project 1" height="400" width="auto">
+                  <img src="img/Project1.png" alt="Project 1" height="400" width="auto" style="padding-right: 60px" id="headshot">
               </div>
           </div>
       </div>
-      <h3>Project #2</h3>
+      <br>
+      <div class="container" style="padding: 5px">
+          <div class="row" style="background-color: var(--green); padding: 20px">
+              <div class="col">
+                 <br><iframe width="560" height="310" src="img/Project2.mp4" frameborder="o" allowfullscreen></iframe><br><br>
+              </div>
+              <div class="col">
+                  <br><br><br><br><br><h3 style="color: var(--white)">Project #2: Adobe Premiere</h3>
+                  <p style="color: var(--white); font-size: 18px">This is my second assignment that was completed in Adobe Premiere. The video shows different features of Premiere such as, video editing, sound editing, text, transitions, etc. </p>
+              </div><br>
+          </div>
+      </div>
       <div class="container">
-          <div class="row">
+          <div class="row" style="padding: 20px">
               <div class="col">
-                 <iframe width="560" height="315" src="img/Project2.mp4" frameborder="0" allowfullscreen></iframe>
-            </div>
+                  <br><br><br><br><br><h3>Project #3: Adobe Illustrator</h3>
+                  <p style="font-size: 18px">This is the last project I completed for the Multimedia class. It is whatever I make in Illustrator....</p>
+              </div>
               <div class="col">
-                  <p>This is my second assignment that was completed in Adobe Premier. The </p>
+                  <p>image to come</p>
               </div>
           </div>
       </div>
