--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,11 @@
       <nav id="menu" class="stroke">
           <ul>
               <li><a href="./index.html" id="menu">Home</a></li>
-              <li><a href="./experience.html" id="menu">Experience</a></li>
+              <li><a href="./experience.html" id="menu">About Me</a></li>
               <li><a href="./portfolio.html" id="menu">Portfolio</a></li>
               <li><a href="./contact.html" id="menu">Contact Me</a></li>
           </ul>
       </nav> 
-<br>
     <h2 class="text-center"> Contact Me</h2> 
       <p style="text-align: center">Use the form below to contact me. I'd love to help!</p> <br>
       
