--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav id="menu" class="stroke">
           <ul>
               <li><a href="./index.html" id="menu">Home</a></li>
-              <li><a href="./experience.html" id="menu">About Me</a></li>
+              <li><a href="./aboutme.html" id="menu">About Me</a></li>
               <li><a href="./portfolio.html" id="menu">Portfolio</a></li>
               <li><a href="./contact.html" id="menu">Contact Me</a></li>
           </ul>
@@ -28,11 +28,10 @@
 <div class="container" style="justify-content: space-evenly">
   <div class="row" style="background-color: var(--green)">
       <div class="col">
-        <h1 class="job"><br><br>Junior High History Teacher| University of Utah Graduate Student</h1>  
+        <h1 class="job"><br>Junior High History Teacher| University of Utah Graduate Student</h1>  
       </div>
     <div class="col">
-        <h2 style="color: var(--white)">Experience and Skills</h2>
-        <p style=color: var(--white)>Put icons of skills and such</p>
+       <br><br><br><img src="img/Headshot.png" alt="Abby Moss Headshot" height="450" width="auto" style="float: right; padding-right: 60px">
     </div>
   </div>
 </div>  
