--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       <nav id="menu" class="stroke">
           <ul>
               <li><a href="./index.html" id="menu">Home</a></li>
-              <li><a href="./experience.html" id="menu">About Me</a></li>
+              <li><a href="./aboutme.html" id="menu">About Me</a></li>
               <li><a href="./portfolio.html" id="menu">Portfolio</a></li>
               <li><a href="./contact.html" id="menu">Contact Me</a></li>
           </ul>
