--- a/experience.html
+++ b/experience.html
@@ -19,7 +19,7 @@
       <nav id="menu" class="stroke">
           <ul>
               <li><a href="./index.html" id="menu">Home</a></li>
-              <li><a href="./experience.html" id="menu">About Me</a></li>
+              <li><a href="./aboutme.html" id="menu">About Me</a></li>
               <li><a href="./portfolio.html" id="menu">Portfolio</a></li>
               <li><a href="./contact.html" id="menu">Contact Me</a></li>
           </ul>
@@ -29,7 +29,8 @@
       <div class="container">
           <div class="row">
               <div class="col">
-                    <p>I recently started my career as a Junior High Social Studies teacher. I completed my undergraduate degree at Brigham Young University in 2019. At BYU, I studied History teaching and Teaching English as a Second Language. <br><br>
+                  <h3 class="text-center">Biography</h3>  
+                  <p>I recently started my career as a Junior High Social Studies teacher. I completed my undergraduate degree at Brigham Young University in 2019. At BYU, I studied History teaching and Teaching English as a Second Language. <br><br>
                         
                         During my time at BYU, I was assigned to student teach at Orem Junior High. After I completed my student teaching experience, I was hired to teach at OJHS. I have been at Orem Junior for the past year and a half as an 8th-Grade U.S. History teacher and a 9th-Grade World History/Geography teacher. I love learning about the past and recognizing the paths that brought us to our present reality. <br><br>
                         
@@ -37,7 +38,15 @@
                   </p>
               </div>
               <div class="col">
-                  <img src="img/Headshot.png" alt="Abby Moss Headshot" height="400" width="auto" style="float: right; padding-right: 80px">
+                  <h3 class="text-center"> Experience and Skills</h3><br>
+                  <dl class="listtitle">Educational Experience</dl>
+                  <li class="list">Bachelor of Arts</li>
+                  <li class="list">Master of Education</li>
+                  <li class="list">Social Studies Teacher (2 Years)</li><br>
+                  <dl class="listtitle">Technology Skills</dl>
+                  <li class="list">Adobe Creative Cloud</li>
+                  <li class="list">Canvas</li>
+                  <li class="list">Microsoft Office</li>
               </div>
           </div>
       </div>
