--- a/aboutme.html
+++ b/aboutme.html
@@ -38,15 +38,15 @@
                   </p>
               </div>
               <div class="col">
-                  <h3 class="text-center"> Experience and Skills</h3><br>
-                  <dl class="listtitle">Educational Experience</dl>
-                  <li class="list">Bachelor of Arts</li>
-                  <li class="list">Master of Education</li>
-                  <li class="list">Social Studies Teacher (2 Years)</li><br>
-                  <dl class="listtitle">Technology Skills</dl>
-                  <li class="list">Adobe Creative Cloud</li>
-                  <li class="list">Canvas</li>
-                  <li class="list">Microsoft Office</li>
+                  <h3 id="text-center"> Experience and Skills</h3><br>
+                  <dl id="listtitle">Educational Experience</dl>
+                  <li id="list">Bachelor of Arts</li>
+                  <li id="list">Master of Education</li>
+                  <li id="list">Social Studies Teacher (2 Years)</li><br>
+                  <dl id="listtitle">Technology Skills</dl>
+                  <li id="list">Adobe Creative Cloud</li>
+                  <li id="list">Canvas</li>
+                  <li id="list">Microsoft Office</li>
               </div>
           </div>
       </div>
