--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
                   </p>
               </div>
               <div class="col">
-                  <h3 id="text-center"> Experience and Skills</h3><br>
+                  <h3 class="text-center"> Experience and Skills</h3><br>
                   <dl id="listtitle">Educational Experience</dl>
                   <li id="list">Bachelor of Arts</li>
                   <li id="list">Master of Education</li>
