--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1 class="job"><br>Junior High History Teacher| University of Utah Graduate Student</h1>  
       </div>
     <div class="col">
-       <br><br><br><img src="img/Headshot.png" alt="Abby Moss Headshot" height="450" width="auto" style="float: right; padding-right: 60px">
+       <br><br><br><img src="img/Headshot.png" alt="Abby Moss Headshot" height="450" width="auto" style="float: right; padding-right: 60px; width: auto;">
     </div>
   </div>
 </div>  
