--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </ul>
       </nav> 
     <br>
-<div class="container" style="justify-content: space-evenly">
+<div class="container" style="justify-content: space-evenly; width: auto">
   <div class="row" style="background-color: var(--green)">
       <div class="col">
         <h1 class="job"><br>Junior High History Teacher| University of Utah Graduate Student</h1>  
