--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       
 		<form class="form">
 			<h3 style="margin-right: 150px; margin-left: 150px;"> Contact Information </h3>
-            <table style="width:80%; margin-right: 150px; margin-left: 150px;">
+            <table style="width:80%; margin-left: 150px;">
                 <tr>
                     <th>First Name:</th>
                     <th>Last Name</th>
