--- a/index.html
+++ b/index.html
@@ -24,21 +24,18 @@
               <li><a href="./contact.html" id="menu">Contact Me</a></li>
           </ul>
       </nav> 
-    <br>
-<div class="container" style="justify-content: space-evenly; width: auto">
-  <div class="row" style="background-color: var(--green)">
-      <div class="col">
-        <h1 class="job"><br>Junior High History Teacher| University of Utah Graduate Student</h1>  
-      </div>
-    <div class="col">
-       <br><br><br><img src="img/Headshot.png" alt="Abby Moss Headshot" height="450" width="auto" style="float: right; padding-right: 60px; width: auto;">
+
+<div class="flexbox-container" style="background-color: var(--green); align-items: center;">
+  <div class="flexbox-item flexbox-item-1">
+      <h3 class="job">Junior High History Teacher| University of Utah Graduate Student</h3>
+    </div>  
+    <div class="flexbox-item flexbox-item-2">
+        <img src="img/Headshot.png" alt="Abby Moss Headshot" height="450px" width="auto">
     </div>
-  </div>
-</div>  
+</div>
+      
     <br>
-  <!--Start About Me Section-->
-  
-<!--End about me Section-->
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
