--- a/aboutme.html
+++ b/aboutme.html
@@ -36,7 +36,7 @@
                         During my first year teaching, I decided that I wanted to further my education while I was young.  I have been working on a Masters of Education at the University of Utah. This Masters Degree is in Instructional Design and Educational Technology. I have completed almost two semesters in the IDET program at the University of Utah. I'm excited to see what else I learn in this program.
                   </p>
           </div>
-          <div class="flexbox-item flexbox-item-2" style="text-align: left;">
+          <div style="text-align: left;">
               <h3 class="text-center"> Experience and Skills</h3><br>
               <dl class="listtitle">Educational Experience</dl>
               <li class="list">Bachelor of Arts</li>
