--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
     
     <div class="flexbox-container" style="background-color: var(--green); align-items: center;">
       <div class="flexbox-item flexbox-item">
-        iframe width="560" height="310" src="img/Project2.mp4" frameborder="o" allowfullscreen></iframe>
+        <iframe width="560" height="310" src="img/Project2.mp4" frameborder="o" allowfullscreen></iframe>
       </div>  
       <div class="flexbox-item flexbox-item">
         <h3 style="color: var(--white)">Project #2: Adobe Premiere</h3>
