--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <title>Abby Moss</title>
   </head>
   <body>
-    <h1 class="text-center">Abby Moss</h1>
+    <h1 class="text-center"<h>Abby Moss</h1>
       <nav id="menu" class="stroke">
           <ul>
               <li><a href="./index.html" id="menu">Home</a></li>
@@ -63,7 +63,7 @@
     
     <div class="flexbox-container">
       <div class="flexbox-item flexbox-item">
-        <h3 class="job">Project #1: Adobe Photoshop</h3>
+        <h3>Project #1: Adobe Photoshop</h3>
         <p style="font-size: 18px">This is my first assignemnt that I completed on Adobe Photoshop. This is a edited headshot. This picture represents many features of Photoshop such as, touching up, blur, color editing, etc.</p>
       </div>  
       <div class="flexbox-item flexbox-item">
