--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     
-    <div class="flexbox-container" style="background-color: var(--green); align-items: center; height= 500px">
+    <div class="flexbox-container" style="background-color: var(--green); align-items: center; height:500px">
       <div class="flexbox-item flexbox-item">
         <iframe width="560" height="310" src="img/Project2.mp4" frameborder="o" allowfullscreen></iframe>
       </div>  
@@ -81,7 +81,7 @@
       </div>
     </div>
   
-    <div class="flexbox-container" style="height=500px">
+    <div class="flexbox-container" style="height:500px">
       <div class="flexbox-item flexbox-item">
         <h3>Project #3: Adobe Illustrator</h3>
         <p style="font-size: 18px">This is the last project I completed for the Multimedia class. It is whatever I make in Illustrator....</p>
