--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,8 @@
       </div>
     
     
-    <div class="flexbox-container">
-      <div class="flexbox-item flexbox-item" style="height:450px; align-items:center;">
+    <div class="flexbox-container" style="height:450px; align-items:center;">
+      <div class="flexbox-item flexbox-item">
         <h3>Project #1: Adobe Photoshop</h3>
         <p style="font-size: 18px">This is my first assignemnt that I completed on Adobe Photoshop. This is a edited headshot. This picture represents many features of Photoshop such as, touching up, blur, color editing, etc.</p>
       </div>  
@@ -81,7 +81,7 @@
       </div>
     </div>
   
-    <div class="flexbox-container" style="height:450pxk; align-items:center;">
+    <div class="flexbox-container" style="height:450px; align-items:center;">
       <div class="flexbox-item flexbox-item">
         <h3>Project #3: Adobe Illustrator</h3>
         <p style="font-size: 18px">This is the last project I completed for the Multimedia class. It is whatever I make in Illustrator....</p>
