--- a/portfolio.html
+++ b/portfolio.html
@@ -66,13 +66,13 @@
         <h3>Project #1: Adobe Photoshop</h3>
         <p style="font-size: 18px">This is my first assignemnt that I completed on Adobe Photoshop. This is a edited headshot. This picture represents many features of Photoshop such as, touching up, blur, color editing, etc.</p>
       </div>  
-      <div class="flexbox-item flexbox-item">
+      <div class="flexbox-item flexbox-item" style="width: device-width">
         <img src="img/Project1.png" alt="Project 1" height="400" width="auto" style="padding-right: 60px" id="headshot">
       </div>
     </div>
     
     <div class="flexbox-container" style="background-color: var(--green); align-items: center; height:450px; align-items:center;">
-      <div class="flexbox-item flexbox-item">
+      <div class="flexbox-item flexbox-item" style="width: device-width">
         <iframe width="560" height="310" src="img/Project2.mp4" frameborder="o" allowfullscreen></iframe>
       </div>  
       <div class="flexbox-item flexbox-item">
