--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
         <iframe width="560" height="310" src="img/Project2.mp4" frameborder="o" allowfullscreen></iframe>
       </div>  
       <div class="flexbox-item flexbox-item">
-        <h3 style="color: var(--white)">Project #2: Adobe Premiere</h3>
+        <h3 style="color: var(--white)">!Project #2: Adobe Premiere</h3>
         <p style="color: var(--white); font-size: 18px">This is my second assignment that was completed in Adobe Premiere. The video shows different features of Premiere such as, video editing, sound editing, text, transitions, etc. </p>
       </div>
     </div>
