--- a/contact.html
+++ b/contact.html
@@ -26,41 +26,40 @@
       </nav> 
     <h2 class="text-center"> Contact Me</h2> 
       <p style="text-align: center">Use the form below to contact me. I'd love to help!</p> <br>
-      
-		<form class="form">
-			<h3 style="margin-right: 150px; margin-left: 150px;"> Contact Information </h3>
-            <table style="width:80%; margin-left: 150px;">
-                <tr>
-                    <th>First Name:</th>
-                    <th>Last Name</th>
-                </tr>
-                <tr>
-                    <td><input type=text name="firstname" id="firstname" style="width: 100%" placeholder="First Name"></td>
-                    <td><input type=text name="lastname" id="lastname" style="width: 100%" placeholder="Last Name"></td>
-                </tr>
-                <tr>
-                    <th colspan="2">Email</th>
-                </tr>
-                <tr>
-                    <td colspan="2"><input type=text name="email" id="email" style="width: 100%" placeholder="Email"></td>
-                </tr>
-                <tr>
-                    <th colspan="2">Subject of Message</th>
-                </tr>
-                <tr>
-                    <td colspan="2"><input type=text name="subject" id="subject" style="width: 100%" placeholder="Subject"></td>
-                </tr>
-                <tr>
-                    <th colspan="2">Message</th>
-                </tr>
-                <tr>
-                    <td colspan="2"><input type=text name="message" id="message" style="width: 100%; height: 200px; vertical-align:top"></td>
-                </tr>
-                <tr>
-                    <th colspan="2"><input type="submit"></th>
-                </tr>
-            </table>
-      </form>
+	  <form class="form">
+		  <h3 style="margin-right: 150px; margin-left: 150px;"> Contact Information </h3>
+		  <table style="width:80%; text-align: center">
+			  <tr>
+				  <th>First Name:</th>
+				  <th>Last Name</th>
+			  </tr>
+			  <tr>
+				  <td><input type=text name="firstname" id="firstname" style="width: 100%" placeholder="First Name"></td>
+				  <td><input type=text name="lastname" id="lastname" style="width: 100%" placeholder="Last Name"></td>
+			  </tr>
+			  <tr>
+				  <th colspan="2">Email</th>
+			  </tr>
+			  <tr>
+				  <td colspan="2"><input type=text name="email" id="email" style="width: 100%" placeholder="Email"></td>
+			  </tr>
+			  <tr>
+				  <th colspan="2">Subject of Message</th>
+			  </tr>
+			  <tr>
+				  <td colspan="2"><input type=text name="subject" id="subject" style="width: 100%" placeholder="Subject"></td>
+			  </tr>
+			  <tr>
+				  <th colspan="2">Message</th>
+			  </tr>
+			  <tr>
+				  <td colspan="2"><input type=text name="message" id="message" style="width: 100%; height: 200px; vertical-align:top"></td>
+			  </tr>
+			  <tr>
+				  <th colspan="2"><input type="submit"></th>
+			  </tr>
+		  </table>
+	  </form>
       <br>
     </body>
 </html>    
