--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
     <h2 class="text-center"> Contact Me</h2> 
       <p style="text-align: center">Use the form below to contact me. I'd love to help!</p> <br>
 	  <form class="form">
-		  <h3 style="text-align: center> Contact Information </h3>
-		  <table style="width:100%; text-align: center">
+		  <h3 style="text-align: center"> Contact Information </h3>
+		  <table style="width:00%; text-align: center">
 			  <tr>
 				  <th>First Name:</th>
 				  <th>Last Name</th>
