--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
       <p style="text-align: center">Use the form below to contact me. I'd love to help!</p> <br>
 	  <form class="form">
 		  <h3 style="text-align: center"> Contact Information </h3>
-		  <table style="width:00%; text-align: center">
+		  <table style="width:80%; content-align: center">
 			  <tr>
 				  <th>First Name:</th>
 				  <th>Last Name</th>
