--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
       </nav> 
     <h2 class="text-center"> Contact Me</h2> 
       <p style="text-align: center">Use the form below to contact me. I'd love to help!</p> <br>
-	  <form class="form">
+	  <div align="center"><form class="form">
 		  <h3 style="text-align: center"> Contact Information </h3>
-		  <table style="width:80%; content-align: center">
+		  <table style="width:80%;">
 			  <tr>
 				  <th>First Name:</th>
 				  <th>Last Name</th>
@@ -59,7 +59,7 @@
 				  <th colspan="2"><input type="submit"></th>
 			  </tr>
 		  </table>
-	  </form>
+		  </form></div>
       <br>
     </body>
 </html>    
