--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
       <p style="text-align: center">Use the form below to contact me. I'd love to help!</p> <br>
 	  <div align="center"><form class="form">
 		  <h3 style="text-align: center"> Contact Information </h3>
-		  <table style="width: device-width;">
+		  <table style="width: 90%; width: device-width;">
 			  <tr>
 				  <th>First Name:</th>
 				  <th>Last Name</th>
