--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
       </nav>
       
       <h2 class="text-center">About Me</h2>
-      <div class="flexbox-container" style="align-items: flex-start; flex-wrap: wrap;">
+      <div class="flexbox-container" style="align-items: flex-start;">
           <div class="flexbox-item flexbox-item-1">
                   <h3 class="text-center">Biography</h3>  
                   <p>I recently started my career as a Junior High Social Studies teacher. I completed my undergraduate degree at Brigham Young University in 2019. At BYU, I studied History teaching and Teaching English as a Second Language. <br><br>
