--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </ul>
       </nav> 
 
-<div class="flexbox-container" style="background-color: var(--green); align-items: center; flex-wrap: wrap;">
+<div class="flexbox-container" style="background-color: var(--green); align-items: center; flex-wrap: wrap; height: 600px">
   <div class="flexbox-item flexbox-item-1">
       <h3 class="job">Junior High History Teacher| University of Utah Graduate Student</h3>
     </div>  
