--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           </ul>
       </nav> 
 
-<div class="flexbox-container" style="background-color: var(--green); align-items: center; flex-wrap: wrap; height: 600px">
+<div class="flexbox-container" style="background-color: var(--green); align-items: center; flex-wrap: wrap; height: 600px;">
   <div class="flexbox-item flexbox-item-1">
-      <h3 class="job">Junior High History Teacher| University of Utah Graduate Student</h3>
+      <h3 class="job">J!unior High History Teacher| University of Utah Graduate Student</h3>
     </div>  
     <div class="flexbox-item flexbox-item-2">
         <img src="img/Headshot.png" alt="Abby Moss Headshot" height="450px" width="auto">
